# LLM-pipelines

./: .gitignore  README.md  create_db.ipynb  db_setup.py  ingestion_service.py  llama_index_test.ipynb  main.py  pyproject.toml  requirements.txt  storage_service.py
backend/: data_processing.py  ingestion_service.py  main.py  query_service.py
backend/ingestion/: ingestion_config.py
data/: config.yaml  news_feed.json  store_config.yaml
frontend/: package-lock.json
frontend/src/: App.js  index.css
ingestion/: ingestion_schema.py  ingestion_utils.py
